--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^23.6.0",
     "node-sass": "^4.7.2",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.0",
@@ -58,7 +59,9 @@
     "react-router-dom": "^4.2.2",
     "reactstrap": "^6.5.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.3.2"
   }
 }
