--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^23.6.0",
+    "mockdate": "^2.0.2",
     "node-sass": "^4.7.2",
     "redux-mock-store": "^1.5.3",
     "sass-loader": "^6.0.6",
